add clock functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vanilla JS Challenge</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="clock"><span></span></div>
+    <div class="login"></div>
+    <div class="todo"></div>
+    <div class="geoloc"></div>
+    <script src="/scripts/index.js"></script>
+    <script src="/scripts/clock.js"></script>
+  </body>
 </html>
