--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
   <body>
-    <div class="clock"><span></span></div>
-    <div class="login"></div>
-    <div class="todo"></div>
-    <div class="geoloc"></div>
-    <script src="./js/index.js"></script>
+    <div id="clock"><span></span></div>
+    <form class="hidden" id="login-form">
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="Tell me your name!"
+      />
+      <input type="submit" value="Log in" />
+    </form>
+    <div class="hidden" id="greeting"></div>
+    <div id="todo"></div>
+    <div id="geoloc"></div>
+    <script src="./js/main.js"></script>
     <script src="./js/clock.js"></script>
   </body>
 </html>
