--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla JS Challenge</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body>
     <div id="clock"><span></span></div>
@@ -21,7 +21,7 @@
     <div class="hidden" id="greeting"></div>
     <div id="todo"></div>
     <div id="geoloc"></div>
-    <script src="./js/main.js"></script>
-    <script src="./js/clock.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/clock.js"></script>
   </body>
 </html>
