--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
         required
         maxlength="15"
         type="text"
-        placeholder="Tell me your name!"
+        placeholder="Hey, what is your name?"
       />
       <input type="submit" value="Log in" />
     </form>
     <div class="hidden" id="greeting"></div>
-    <div id="todo"></div>
+    <form id="todo-form">
+        <input type="text" placeholder="New Todo" required />
+    </form>
+    <ul id="todo-list"></ul>
+    </div>
     <div id="geoloc"></div>
     <script src="./js/main.js"></script>
     <script src="./js/clock.js"></script>
+    <script src="./js/todo.js"></script>
   </body>
 </html>
