--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
     </form>
     <ul id="todo-list"></ul>
     </div>
-    <div id="geoloc"></div>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
     <script src="./js/main.js"></script>
     <script src="./js/clock.js"></script>
     <script src="./js/todo.js"></script>
+    <script src="./js/weather.js"></script>
   </body>
 </html>
