--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
   <body>
+    <div>    
+      <form id="search">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" required placeholder="Google search">
+        <button type="submit"></button>
+      </form>
+    </div>
     <div id="clock"><span></span></div>
     <form class="hidden" id="login-form">
       <input
@@ -28,9 +35,12 @@
         <span></span>
         <span></span>
     </div>
+    <script src="./js/apikey.js"></script> 
     <script src="./js/main.js"></script>
     <script src="./js/clock.js"></script>
     <script src="./js/todo.js"></script>
     <script src="./js/weather.js"></script>
+    <script src="./js/search.js"></script>
+    <script src="https://kit.fontawesome.com/3294494ea5.js" crossorigin="anonymous"></script>
   </body>
 </html>
