1. weather icon 추가 2. search focus 없을 때 감추기
Signed-off-by: Jeehyang Huh <jeehyang.huh@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div>
       <form id="search">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" required placeholder="Google search" />
-        <button type="submit"></button>
+        <input type="text" required placeholder="Search" class="hidden" />
+        <i class="fa-brands fa-google"></i>
       </form>
     </div>
     <div id="clock"><span></span></div>
@@ -42,6 +42,7 @@
     </div>
     <div id="weather">
       <span></span>
+      <img />
       <span></span>
     </div>
     <script src="./js/apikey.js"></script>
