finished css for search
Signed-off-by: Jeehyang Huh <jeehyang.huh@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
       <form id="search">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" required class="hidden" />
+        <input type="text" required class="hidden" color="white" />
         <i class="fa-brands" id="icon"></i>
       </form>
     </div>
@@ -29,6 +29,7 @@
             required
             maxlength="15"
             type="text"
+            color="white"
             placeholder="Hey, what is your name?"
           />
           <input type="submit" value="Log in" />
