finished styling search, main and weather
Signed-off-by: Jeehyang Huh <jeehyang.huh@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
       <form id="search">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" required class="hidden" color="white" />
+        <input type="text" required color="white" />
         <i class="fa-brands" id="icon"></i>
       </form>
     </div>
