--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
     </div>
 
     <div id="todo">
-      <form id="todo-form">
-        <input type="text" placeholder="New Todo" required />
-      </form>
-      <ul id="todo-list"></ul>
+      <div id="todo-title">Todo</div>
+      <div id="todo-container" class="hidden">
+        <div>Todo</div>
+        <ul id="todo-list"></ul>
+        <form id="todo-form">
+          <input type="text" placeholder="New Todo" required />
+        </form>
+      </div>
     </div>
     <div id="weather">
       <img />
